<resources>
    <string name="app_name">GraphAgregator</string>

    <!-- TopFragment -->
    <string name="top_day_text">01 апреля 2016\n количество шагов: 3500\n сон : 7</string>


    <!-- TODO: Временный текст, удалить -->
    <string name="title_top">Top fragment</string>
    <string name="title_service">Add service</string>
    <string name="title_settings">Settings</string>
    <string name="title_reference">In here will be reference information.</string>
    <string name="title_activity_order">Delete</string>

    <!-- Панель меню действий-->
    <string name="action_settings">Settings</string>
    <string name="action_create_order">Create Order</string>
    <string name="action_share">Share</string>
    <string name="action_alarm">Share</string>

    <!-- Название фрагментов для боковой панели -->
    <string-array name="titles_drawer">
        <item>Home</item>
        <item>Service</item>
        <item>Settings</item>
        <item>Reference</item>
        <item>SQLite</item>
        <item>Import CSV-file</item>
        <item>Export CSV-file</item>
    </string-array>

    <!-- Состояние выдвижной панели -->
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>


    <!-- Меню переключение даты -->
    <string name="arrow_text">Today</string>


    <!-- Кнопки в ImportCSV и ExportCSV-->
    <string name="import_scv_add_file">Open file</string>

    <string name="import_radio_button_num">Write number of coincidences</string>
    <string name="import_radio_button_max">Write the maximum values</string>
    <string name="import_radio_button_sum">Write the sum of values</string>


    <!-- Ошибки -->
    <string name="error_not_find_file_manager">ERROR: Not found file manager. Please install so.</string>
    <string name="error_problem_reading_csv_file">ERROR: Not found file. Please check the availability of the device memory.</string>
    <string name="error_parsing_csv_file">ERROR: Incorrect file structure.</string>
    <string name="error_not_correct_name_column">ERROR: Incorrect column name. Check that the name does not contain special characters.</string>
    <string name="error_not_correct_name_file">ERROR: Incorrect file name.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_only_wifi">Только по wi-fi</string>
    <string name="title_activity_fit_test">FitTest</string>
</resources>
