<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hfad.graphagregator.MainActivity">
    <!-- Меню панели действий-->

  <item android:id="@+id/action_create_order"
        android:title="@string/action_create_order"
        android:icon="@drawable/ic_action_new_event"
        android:orderInCategory="1"
        android:showAsAction="never" />

  <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:actionProviderClass="android.widget.ShareActionProvider" />

    <item android:id="@+id/action_done"
        android:title="@string/action_create_order"
        android:icon="@drawable/ic_done_black_36dp"
        android:orderInCategory="3"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_mode"
        android:title="@string/action_create_order"
        android:icon="@drawable/ic_mode_edit_black_36dp"
        android:orderInCategory="4"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_delete"
        android:title="@string/action_create_order"
        android:icon="@drawable/ic_delete_black_36dp"
        android:orderInCategory="5"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_sync"
        android:title="@string/action_create_order"
        android:icon="@drawable/ic_autorenew_black_36dp"
        android:orderInCategory="6"
        android:showAsAction="ifRoom" />


  
  <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
